# ide4ai

./: .bumpversion.toml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: tests.yml
.windsurf/workflows/: pyide-mcp.md
ai_ide/: __init__.py  base.py  utils.py
ai_ide/dtos/: diagnostics.py  workspace_edit.py
ai_ide/environment/terminal/: docker_terminal_env.py  local_terminal_env.py
ai_ide/environment/workspace/: base.py  model.py  model_search.py  schema.py  utils.py
ai_ide/python_ide/: ide.py  workspace.py
docs/: grep_tool_usage.md
docs/environment/terminal/: PEXPECT_USAGE.md
examples/: mcp_server_example.py  mcp_server_sse_example.py  mcp_server_streamable_http_example.py
ide4ai/: __init__.py  base.py  ides.py  schema.py  utils.py
ide4ai/a2c_smcp/: server.py
ide4ai/a2c_smcp/schemas/: __init__.py  tools.py
ide4ai/a2c_smcp/tools/: __init__.py  bash.py
ide4ai/environment/terminal/: __init__.py  command_filter.py  local_terminal_env.py  pexpect_terminal_env.py
ide4ai/environment/terminal/execution/: __init__.py  run_result.py
ide4ai/environment/terminal/parser/: __init__.py  command_ast.py  env_prefix.py  tokenizer.py  wrapper_peel.py
ide4ai/environment/terminal/policy/: __init__.py  classifier.py  engine.py  rule.py
ide4ai/environment/terminal/semantics/: __init__.py  output_pipeline.py
ide4ai/environment/workspace/: base.py
ide4ai/python_ide/: ide.py  utils.py  workspace.py
ide4ai/python_ide/a2c_smcp/: server.py
ide4ai/python_ide/a2c_smcp/tools/: notebook_edit.py
ide4ai/python_ide/mcp/: README.md  __init__.py  config.py  server.py
ide4ai/python_ide/mcp/schemas/: __init__.py  tools.py
ide4ai/python_ide/mcp/tools/: __init__.py  base.py  bash.py  edit.py  glob.py  grep.py  read.py
src/ai_ide/: __init__.py  base.py  exceptions.py  ides.py  schema.py  tool.py  utils.py
src/ai_ide/dtos/: __init__.py  commands.py  file_resource.py  text_documents.py  workspace_edit.py
src/ai_ide/environment/: __init__.py
src/ai_ide/environment/terminal/: __init__.py  base.py  docker_terminal_env.py  local_terminal_env.py
src/ai_ide/environment/workspace/: __init__.py  base.py  model.py  model_search.py  schema.py  utils.py
src/ai_ide/environment/workspace/common/: dispose.py  (+1 more)
src/ai_ide/extensions/: tfrobot_claude_tool.py
src/ai_ide/python_ide/: __init__.py  const.py  ide.py  workspace.py
tests/: __init__.py  test_claude_tool.py  test_schema.py  test_tool.py  test_utils.py
tests/a2c_smcp/tools/: test_mcp_bash_tool.py  test_mcp_glob_tool.py
tests/environment/: __init__.py  test_command_filter_shim.py  test_pexpect_terminal.py
tests/environment/terminal/execution/: test_run_result.py
tests/environment/terminal/parser/: test_env_prefix.py  test_tokenizer.py
tests/environment/terminal/policy/: test_classifier.py  test_engine.py  test_rule.py
tests/environment/terminal/semantics/: test_exit_code.py  test_output_pipeline.py
tests/environment/workspace/: test_base.py  test_model.py  test_schema.py  test_text_model_search.py  test_utils.py
tests/environment/workspace/common/: __init__.py  test_dispose.py
tests/integration/: conftest.py  test_tool.py  test_utils.py
tests/integration/environment/terminal/: __init__.py  test_local_terminal_env.py
tests/integration/environment/workspace/: __init__.py  test_base.py
tests/integration/python_ide/: __init__.py  test_async_docker_pyright.py  test_docker_pyright.py  test_ide.py  test_mcp_bash_tool.py  test_mcp_server_config.py  test_mcp_server_transports.py  test_pyright.py  test_python_ide_venv.py  test_workspace.py  test_workspace_render.py
tests/integration/python_ide/a2c_smcp/: test_as20_repro.py
tests/integration/python_ide/mcp/: test_grep_integration.py  test_mcp_server_config.py  test_mcp_server_transports.py
tests/integration/python_ide/virtual_project/: __init__.py  file_for_edit.py  file_for_render_1.py  file_for_test_read.py
(+12 files in other folders)
